--- a/resources/assets/stylesheets/less/buttons.less
+++ b/resources/assets/stylesheets/less/buttons.less
@@ -1,10 +1,10 @@
 /* Stud.IP button styles */
 .button() {
     background: white;
-    border: 1px solid @base-color;
+    border: 1px solid var(--base-color);
     border-radius: 0;
     box-sizing: border-box;
-    color: @base-color;
+    color: var(--base-color);
     cursor: pointer;
     display: inline-block;
     font-family: @font-family-base;
@@ -22,18 +22,18 @@
     width: auto;
 
     &:hover, &:active  {
-        background: @base-color;
+        background: var(--base-color);
         color: white;
     }
 
     &.disabled, &[disabled] {
         box-shadow: none;
-        background: @light-gray-color-20;
+        background: var(--light-gray-color-20);
         cursor: default;
         opacity: 0.65;
 
         &:hover {
-            color: @base-color;
+            color: var(--base-color);
         }
     }
 
@@ -148,13 +148,13 @@ button,
         cursor: pointer;
 
         &[formaction] {
-            color: @base-color;
+            color: var(--base-color);
 
             transition: color 0.3s;
 
             &:hover,
             &:active {
-                color: @active-color;
+                color: var(--active-color);
                 text-decoration: none;
             }
 
