--- a/resources/assets/stylesheets/scss/big-image-handler.scss
+++ b/resources/assets/stylesheets/scss/big-image-handler.scss
@@ -30,7 +30,7 @@ $bg-big-image-handler: fade-out($black, 0.3);
         background-position: center;
         background-repeat: no-repeat;
         background-size: contain;
-        border: 1px solid $white;
+        border: 1px solid var(--white);
         box-shadow: 0 0 20px fade-out($white, 0.5);
         display: block;
         max-width: 98%;
