--- a/resources/assets/stylesheets/scss/blockquote.scss
+++ b/resources/assets/stylesheets/scss/blockquote.scss
@@ -1,6 +1,6 @@
 blockquote {
-    background-color: $dark-gray-color-5;
-    border-left: 3px solid $base-color;
+    background-color: var(--dark-gray-color-5);
+    border-left: 3px solid var(--base-color);
     padding: 4px 10px;
     margin: 0 0 8px;
     color: black;
@@ -12,7 +12,7 @@ blockquote {
     blockquote {
         background-color: white;
         blockquote {
-            background-color: $dark-gray-color-5;
+            background-color: var(--dark-gray-color-5);
             blockquote {
                 background-color: white;
             }
