--- a/resources/assets/stylesheets/scss/comments.scss
+++ b/resources/assets/stylesheets/scss/comments.scss
@@ -1,9 +1,9 @@
 section.comments {
     text-align: left;
-    border-color: $content-color-40;
+    border-color: var(--content-color-40);
     border-top-style: none;
     border-width: 1px;
-    background-color: $white;
+    background-color: var(--white);
     padding: 5px;
 
     h1 {
@@ -14,7 +14,7 @@ section.comments {
     }
     article.comment {
         border: 0;
-        border-top: 1px solid $light-gray-color-40;
+        border-top: 1px solid var(--light-gray-color-40);
         max-width: 1260px;
         margin-bottom: 4px;
 
@@ -25,7 +25,7 @@ section.comments {
         time {
             float: right;
             font-size: 0.8em;
-            color: $light-gray-color-40;
+            color: var(--light-gray-color-40);
         }
     }
 }
