--- a/resources/assets/stylesheets/scss/consultation.scss
+++ b/resources/assets/stylesheets/scss/consultation.scss
@@ -1,5 +1,5 @@
 .consultation-note {
-    border-bottom: 1px solid $light-gray-color-40;
+    border-bottom: 1px solid var(--light-gray-color-40);
     font-size: $font-size-small;
     margin-bottom: 2px;
     padding-bottom: 2px;
@@ -9,7 +9,7 @@
         margin-bottom: 0;
         padding-bottom: 0;
 
-        border-top: 1px solid $light-gray-color-40;
+        border-top: 1px solid var(--light-gray-color-40);
         margin-top: 2px;
         padding-top: 2px;
     }
@@ -37,6 +37,6 @@
         font-style: italic;
     }
     .slot-is-expired td {
-        background-color: $dark-gray-color-10;
+        background-color: var(--dark-gray-color-10);
     }
 }
