--- a/resources/assets/stylesheets/scss/copyable-links.scss
+++ b/resources/assets/stylesheets/scss/copyable-links.scss
@@ -6,12 +6,12 @@
     line-height: 60px;
     max-width: calc(100% - 140px);
     z-index: 42000;
-    border: solid thin $content-color-40;
-    background-color: $white;
+    border: solid thin var(--content-color-40);
+    background-color: var(--white);
     background-repeat: no-repeat;
     background-position: 1em center;
     background-size: 100px;
-    box-shadow: 5px 5px #ececed;
+    box-shadow: 5px 5px var(--dark-gray-color-10);
     padding: 5px 100px;
     transition: transform .5s ease;
 
