--- a/resources/assets/stylesheets/scss/cronjobs.scss
+++ b/resources/assets/stylesheets/scss/cronjobs.scss
@@ -13,11 +13,11 @@
         display: none;
     }
     .selected {
-        td { background-color: $red-40; }
+        td { background-color: var(--red-40); }
         tr ~ tr {
             display: table-row;
             td {
-                background-color: $white;
+                background-color: var(--white);
             }
             td[colspan] {
                 background-color: inherit;
@@ -26,7 +26,7 @@
         }
     }
     .parameters {
-        border: 1px solid $dark-gray-color;
+        border: 1px solid var(--dark-gray-color);
         border-bottom: 0;
         border-top: 0;
         padding: 0.5em;
@@ -49,7 +49,7 @@
         }
     }
     tbody:last-child .parameters {
-        border-bottom: 1px solid $white;
+        border-bottom: 1px solid var(--white);
         border-bottom-right-radius: 3px;
         border-bottom-left-radius: 3px;
     }
@@ -81,7 +81,7 @@
 }
 
 .inactivatible td {
-    color: $dark-gray-color;
+    color: var(--dark-gray-color);
 }
 
 .cronjobs-edit {
