--- a/resources/assets/stylesheets/scss/css_tree.scss
+++ b/resources/assets/stylesheets/scss/css_tree.scss
@@ -1,6 +1,6 @@
 $css-tree-delay: 300ms;
 $css-tree-distance: 8px;
-$css-tree-border: 1px solid $light-gray-color-80;
+$css-tree-border: 1px solid var(--light-gray-color-80);
 
 .css-tree {
     &, ul {
@@ -43,7 +43,7 @@ $css-tree-border: 1px solid $light-gray-color-80;
         top: $css-tree-distance;
     }
     ul li:last-child:before {
-        background: $white;
+        background: var(--white);
         height: auto;
         top: 10px;
         bottom: 0;
@@ -96,7 +96,7 @@ $css-tree-border: 1px solid $light-gray-color-80;
         display: none;
 
         + label {
-            color: $brand-color-dark;
+            color: var(--brand-color-dark);
             border-radius: 2px;
             cursor: pointer;
             padding: 0 3px;
@@ -105,11 +105,11 @@ $css-tree-border: 1px solid $light-gray-color-80;
 
         &:checked + label {
             font-weight: bold;
-            background: $content-color-40;
+            background: var(--content-color-40);
         }
 
         &[disabled] + label {
-            color: $dark-gray-color-20;
+            color: var(--dark-gray-color-20);
         }
     }
 }
