--- a/resources/assets/stylesheets/scss/dates.scss
+++ b/resources/assets/stylesheets/scss/dates.scss
@@ -12,15 +12,15 @@ table.dates {
         }
     }
     .nextdate {
-        background-color: $content-color-40;
+        background-color: var(--content-color-40);
     }
 
     .topic-droppable {
         &.active {
-            background-color: $activity-color-40;
+            background-color: var(--activity-color-40);
         }
         &.hovered {
-            background-color: $activity-color-80;
+            background-color: var(--activity-color-80);
         }
     }
     .drag-handle {
