--- a/resources/assets/stylesheets/scss/forum.scss
+++ b/resources/assets/stylesheets/scss/forum.scss
@@ -7,10 +7,8 @@
     -webkit-border-radius: $radius;
 }
 
-$forum_light: #e7ebf1;
-$forum_dark: #d0d7e3;
-$forum_header: #899ab9;
-$forum_highlight: #ffe4ad;
+
+
 $shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
 
 @media print {
@@ -22,7 +20,7 @@ $shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
 
         div.title {
             p.author {
-                margin-bottom: 0px;
+                margin-bottom: 0;
             }
         }
 
@@ -46,8 +44,8 @@ $shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
     }
 
     span.highlight {
-        background-color: #ffe4ad;
-        border: 1px solid #ffe4ad;
+        background-color: var(--activity-color-40);
+        border: 1px solid var(--activity-color-40);
         @include rounded;
     }
 
@@ -60,12 +58,12 @@ $shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
     }
 
     .forum_header {
-        background-color: $forum_header;
-        color: #ffffff;
-        margin: 0pt;
-        padding: 0pt;
+        background-color: var(--content-color);
+        color: var(--white);
+        margin: 0;
+        padding: 0;
         .button {
-            margin: 0px;
+            margin: 0;
         }
 
     }
@@ -78,7 +76,7 @@ $shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
 
     table.forum {
         td.selected {
-            background-color: $forum_highlight
+            background-color: var(--activity-color-40);
         }
     }
 
@@ -129,7 +127,7 @@ $shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
         cursor: pointer;
 
         span {
-            color: #FF3333;
+            color: var(--red-80);
         }
     }
 
@@ -152,7 +150,7 @@ $shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
         height: 100%;
         margin: 0 0 0.75em 0;
         padding: 0;
-        background-color: $forum_light;
+        background-color: var(--content-color-20);
         a {
             word-break: break-all;
 
@@ -178,7 +176,7 @@ $shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
     }
 
     div.highlight {
-        border: 4px solid #ffe4ad;
+        border: 4px solid var(--activity-color-40);
         animation: border-pulsate 2s 5;
     }
 
@@ -233,7 +231,7 @@ $shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
         @media only screen and (max-width: 768px) {
             display: none !important;
         }
-        border-left: 1px solid #ffffff;
+        border-left: 1px solid var(--white);
         margin: 0;
         padding: 4px;
         height: 100%;
@@ -308,10 +306,8 @@ $shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
       text-decoration: none;
 
         span {
-          position: relative;
           display: inline-block;
           margin-bottom: 9px;
-          background-color: rgba(255, 255, 255, 0.3);
           background-image: -moz-linear-gradient(top, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0));
           background-image: -webkit-gradient(linear, 0 0, 0 100%, from(rgba(255, 255, 255, 0.5)), to(rgba(255, 255, 255, 0)));
           background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0));
@@ -319,15 +315,11 @@ $shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
           background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0));
           background-repeat: repeat-x;
           filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#80ffffff', endColorstr='#00ffffff', GradientType=0);
-          background-color: #ddd;
-          border: 2px solid #ccc;
-          -webkit-border-radius: 4px;
-          -moz-border-radius: 4px;
+          background-color: var(--dark-gray-color-20);
+          border: 2px solid var(--dark-gray-color-30);
           border-radius: 4px;
           top: 20%;
-          bottom: none;
-          -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.4), 0 1px 0 rgba(255, 255, 255, 0.5) inset;
-          -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.4), 0 1px 0 rgba(255, 255, 255, 0.5) inset;
+          bottom: 0;
           box-shadow: 0 1px 2px rgba(0, 0, 0, 0.4), 0 1px 0 rgba(255, 255, 255, 0.5) inset;
           font-size: 10pt;
           font-weight: normal;
@@ -350,7 +342,7 @@ $shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
     }
 
     li.selected {
-        background-color: #DDDDFF;
+        background-color: var(--base-color-20);
     }
 
     div.posting.bg2 {
