--- a/resources/assets/stylesheets/scss/index.scss
+++ b/resources/assets/stylesheets/scss/index.scss
@@ -69,7 +69,7 @@ $gap-between-boxes: calc($login-page-margin / 2);
 
                     p {
                         font-size: 0.5em;
-                        color: $black;
+                        color: var(--black);
                     }
                 }
             }
@@ -83,7 +83,7 @@ $gap-between-boxes: calc($login-page-margin / 2);
             display: flex;
             align-items: center;
             gap: 5px;
-            border-top: 1px solid $light-gray-color;
+            border-top: 1px solid var(--light-gray-color);
             font-size: 0.9em;
             padding: 10px;
 
@@ -93,7 +93,7 @@ $gap-between-boxes: calc($login-page-margin / 2);
         }
 
         div.login_info {
-            border-top: 1px solid $light-gray-color;
+            border-top: 1px solid var(--light-gray-color);
             font-size: 0.8em;
             div {
                 text-align: right;
