--- a/resources/assets/stylesheets/scss/layouts.scss
+++ b/resources/assets/stylesheets/scss/layouts.scss
@@ -22,7 +22,7 @@ html {
 }
 
 body {
-    background-color: $white;
+    background-color: var(--white);
     display: grid;
     grid-column-gap: 5px;
     grid-row-gap: $grid-gap;
@@ -30,7 +30,7 @@ body {
     grid-template-rows: auto 1fr auto;
 
     &::backdrop {
-        background: $white;
+        background: var(--white);
     }
 }
 
@@ -48,7 +48,7 @@ body {
 #navigation-level-1 {
     align-content: stretch;
     align-items: stretch;
-    background-color: $white;
+    background-color: var(--white);
     border-radius: 0 0 2px 2px;
     box-sizing: border-box;
     display: flex;
@@ -70,7 +70,7 @@ body {
 
 /* --- Layouts -------------------------------------------------------------- */
 #current-page-structure {
-    background-color: #fff;
+    background-color: var(--white);
     border-radius: 0 0 2px 2px;
     position: relative;
     width: 100%;
@@ -102,7 +102,7 @@ body {
         max-height: 30px;
         overflow: hidden;
 
-        background: linear-gradient(to bottom, $dark-gray-color-5, $dark-gray-color-10);
+        background: linear-gradient(to bottom, var(--dark-gray-color-5), var(--dark-gray-color-10));
 
         > .context_icon {
             margin: 7px 1px 0 9px;
@@ -112,8 +112,8 @@ body {
 
     .tabs_wrapper {
         align-items: stretch;
-        background-color: $dark-gray-color-10;
-        border-bottom: 1px solid $dark-gray-color-40;
+        background-color: var(--dark-gray-color-10);
+        border-bottom: 1px solid var(--dark-gray-color-40);
         display: flex;
         flex-direction: row;
         flex-wrap: nowrap;
@@ -143,15 +143,15 @@ body {
 }
 
 #sidebar {
-    border-left: 1px dashed $brand-color-darker;
+    border-left: 1px dashed var(--brand-color-darker);
     grid-column: 1 / 2;
     grid-row: 2 / 3;
 }
 
 #content-wrapper {
     background:
-        linear-gradient(90deg, #fff 30%, hsla(0, 0%, 100%, 0)),
-        linear-gradient(90deg, hsla(0, 0%, 100%, 0), #fff 70%) 100% 0,
+        linear-gradient(90deg, var(--white) 30%, hsla(0, 0%, 100%, 0)),
+        linear-gradient(90deg, hsla(0, 0%, 100%, 0), var(--white) 70%) 100% 0,
         radial-gradient(farthest-side at 0 50%, rgba(0, 0, 0, .2), transparent),
         radial-gradient(farthest-side at 100% 50%, rgba(0, 0, 0, .2), transparent) 100% 0;
     background-attachment: local, local, scroll, scroll;
@@ -182,8 +182,8 @@ body {
 
 // for old pages without template layout
 #layout_table {
-    background-color: $light-gray-color-60;
-    border: 20px solid #fff;
+    background-color: var(--light-gray-color-60);
+    border: 20px solid var(--white);
     margin: 0;
     padding: 0;
     width: 100%;
@@ -193,7 +193,7 @@ body {
 
 #page-title-container {
     float: left;
-    background-color: #fff;
+    background-color: var(--white);
     line-height: 20px;
     margin-left: 15px;
     margin-right: 15px;
@@ -207,7 +207,7 @@ body {
     max-height: 30px;
     overflow: hidden;
 
-    background: linear-gradient(to bottom, $dark-gray-color-5, $dark-gray-color-10);
+    background: linear-gradient(to bottom, var(--dark-gray-color-5), var(--dark-gray-color-10));
 
     > .context_icon {
         margin: 7px 1px 0 9px;
@@ -223,8 +223,8 @@ body {
 }
 
 #main-footer {
-    background-color: $base-color;
-    color: $white;
+    background-color: var(--base-color);
+    color: var(--white);
     display: flex;
     padding: 2px 0;
     grid-column: 1 / 3;
@@ -251,7 +251,7 @@ body {
             margin-right: 2px;
 
             a {
-                color: $white;
+                color: var(--white);
                 margin: 0 6px;
                 text-decoration: none;
                 &:hover {
@@ -273,7 +273,7 @@ body {
     width: 100%;
     min-width: $site-width;
 
-    border-bottom: 1px solid $light-gray-color-40;
+    border-bottom: 1px solid var(--light-gray-color-40);
 }
 
 #top-bar {       // second row of flex-main
@@ -301,10 +301,10 @@ body {
             flex-direction: row;
             align-items: stretch;
             justify-content: space-between;
-            background-color: $dark-gray-color-10;
+            background-color: var(--dark-gray-color-10);
             font-size: 0.9em;
             min-height: 2.3em;
-            border-bottom: 1px solid $dark-gray-color-40;
+            border-bottom: 1px solid var(--dark-gray-color-40);
         }
 
         #tabs { // row 1 of layout_page
