--- a/resources/assets/stylesheets/scss/lists.scss
+++ b/resources/assets/stylesheets/scss/lists.scss
@@ -39,7 +39,7 @@ ol {
     display: flex; // Prevents the mystery gap between elements
 
     > li {
-        border-right: 1px solid $dark-gray-color;
+        border-right: 1px solid var(--dark-gray-color);
 
         &:last-child {
             border-right: 0;
