--- a/resources/assets/stylesheets/scss/mvv.scss
+++ b/resources/assets/stylesheets/scss/mvv.scss
@@ -3,7 +3,7 @@
         display: block;
         input[type="text"] {
             box-sizing: border-box;
-            border: 1px solid $base-color-60;
+            border: 1px solid var(--base-color-60);
             border-right-width: 30px;
             float: left;
             height: 22px;
@@ -42,7 +42,7 @@ dl {
 
         dd {
             padding: 10px 10px 10px 30px;
-            border-bottom: 1px solid $dark-gray-color-20;
+            border-bottom: 1px solid var(--dark-gray-color-20);
 
             label {
                 display: inline-block;
@@ -65,15 +65,15 @@ dl {
         }
 
         blockquote {
-            border: 1px dashed $dark-gray-color-80;
+            border: 1px dashed var(--dark-gray-color-80);
             margin: 3px;
             padding: 3px;
             font-size: 0.9em;
             flex: 1 0 auto;
 
             &:hover {
-                background-color: $yellow-20;
-                border-color: $red;
+                background-color: var(--yellow-20);
+                border-color: var(--red);
             }
         }
 
@@ -110,7 +110,7 @@ table {
 
         > tbody {
             &.collapsed > tr > td {
-                border-bottom: 1px solid $dark-gray-color-20;
+                border-bottom: 1px solid var(--dark-gray-color-20);
                 padding: 5px;
                 &:first-child {
                     padding-left: 0;
@@ -119,7 +119,7 @@ table {
 
             &.not-collapsed {
                 > tr > td {
-                    border-bottom: 1px solid $dark-gray-color-20;
+                    border-bottom: 1px solid var(--dark-gray-color-20);
                     padding: 5px;
                     &:first-child {
                         padding-left: 0;
@@ -131,7 +131,7 @@ table {
             }
 
             &:last-of-type > tr.last-child > td {
-                border-bottom: 1px solid $dark-gray-color-20;
+                border-bottom: 1px solid var(--dark-gray-color-20);
             }
 
             &.ui-sortable-helper {
@@ -208,7 +208,7 @@ table {
 
         td {
             border: none;
-            border-right:1px solid $dark-gray-color-20;
+            border-right:1px solid var(--dark-gray-color-20);
             text-align: center;
             margin: 0;
             padding:0;
@@ -216,17 +216,17 @@ table {
             &.type{
                 font-size: 0.5em;
                 &.soll{
-                    color:$red;
+                    color:var(--red);
                 }
                 &.kann{
-                    color:$dark-green;
+                    color:var(--dark-green);
                 }
             }
         }
 
         th {
             border: none;
-            border-right:1px solid $dark-gray-color-20;
+            border-right:1px solid var(--dark-gray-color-20);
             text-align: center;
             margin: 0;
             padding:0;
@@ -255,18 +255,18 @@ ul {
         }
 
         &.even {
-            background-color: $dark-gray-color-10;
+            background-color: var(--dark-gray-color-10);
 
             &:hover {
-                background-color: $content-color-60;
+                background-color: var(--content-color-60);
             }
         }
 
         &.odd {
-            background-color: $dark-gray-color-5;
+            background-color: var(--dark-gray-color-5);
 
             &:hover {
-                background-color: $content-color-40;
+                background-color: var(--content-color-40);
             }
         }
     }
@@ -314,7 +314,7 @@ ul {
         padding: 0;
 
         li {
-            border-bottom: solid $dark-gray-color-45 1px;
+            border-bottom: solid var(--dark-gray-color-45) 1px;
             padding-top: 5px;
             padding-left: 12px;
             margin-bottom: 5px;
@@ -402,12 +402,12 @@ select.mvv-search-select-list {
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
-            border-top: 1px solid $dark-gray-color-60;
+            border-top: 1px solid var(--dark-gray-color-60);
             padding: 3px 20px 3px 2px;
             height: 1.3em;
 
             &:hover {
-                background:$dark-gray-color-10;
+                background:var(--dark-gray-color-10);
                 cursor: pointer;
                 font-weight: bold;
             }
@@ -544,11 +544,11 @@ form.default .mvv-inst-chooser select {
 
 .mvv-orig-lang {
     display: none;
-    border: 1px solid $light-gray-color-40;
+    border: 1px solid var(--light-gray-color-40);
     margin: 3px;
     padding: 3px;
     font-size: 0.9em;
-    background-color: $white;
+    background-color: var(--white);
     max-height: 10em;
     overflow: auto;
 }
@@ -561,11 +561,11 @@ form.default .mvv-inst-chooser select {
     }
 
     &.odd {
-        background-color: $dark-gray-color-5;
+        background-color: var(--dark-gray-color-5);
     }
 
     &.even {
-        background-color: $content-color-20;
+        background-color: var(--content-color-20);
     }
 }
 
@@ -631,7 +631,7 @@ form.default .mvv-inst-chooser select {
 .mvv-content-overlay {
     width: 1100px;
     position: absolute;
-    background-color: $white;
+    background-color: var(--white);
     height: 80%;
 }
 
@@ -653,7 +653,7 @@ form.default .mvv-inst-chooser select {
 }
 
 .difflog {
-    color: $brown;
+    color: var(--brown);
     font-size: smaller;
     vertical-align: text-top;
     text-decoration: none;
