--- a/resources/assets/stylesheets/scss/navigation-hoverborder.scss
+++ b/resources/assets/stylesheets/scss/navigation-hoverborder.scss
@@ -1,5 +1,3 @@
-$transition-duration: 300ms;
-
 @mixin border-beneath($color, $margin: 2px, $height: 3px) {
     border-bottom: 0;
     padding-bottom: 0;
@@ -32,10 +30,10 @@ $transition-duration: 300ms;
 
 body:not(.fixed) #navigation-level-1-items {
     > li.active {
-        @include border-beneath($dark-gray-color-80);
+        @include border-beneath(var(--dark-gray-color-80));
     }
     > li:not(.active) {
-        @include border-beneath($dark-gray-color-40);
+        @include border-beneath(var(--dark-gray-color-40));
         &:not(:hover)::after {
             @include border-shrink();
         }
@@ -50,7 +48,7 @@ body:not(.fixed) #navigation-level-1-items {
     }
 
     .overflow li:hover {
-        @include border-beneath($dark-gray-color-40, 2px, 3px);
+        @include border-beneath(var(--dark-gray-color-40), 2px, 3px);
         &::after {
             transform: translate(0, -4px);
         }
@@ -63,10 +61,10 @@ body:not(.fixed) #navigation-level-1-items {
             line-height: 25px;
         }
         &.current {
-            @include border-beneath($dark-gray-color-80, -2px, 3px);
+            @include border-beneath(var(--dark-gray-color-80), -2px, 3px);
         }
         &:not(.current) {
-            @include border-beneath($dark-gray-color-40, -2px, 3px);
+            @include border-beneath(var(--dark-gray-color-40), -2px, 3px);
             &:not(:hover)::after {
                 @include border-shrink();
             }
