--- a/resources/assets/stylesheets/scss/navigation.scss
+++ b/resources/assets/stylesheets/scss/navigation.scss
@@ -16,7 +16,7 @@ body:not(.fixed) #navigation-level-1-items {
         font-size: $font-size-base;
     }
     a {
-        color: $base-color;
+        color: var(--base-color);
         display: block;
         padding: 0 0;
         text-align: center;
@@ -50,10 +50,10 @@ body:not(.fixed) #navigation-level-1-items {
                 @include square(16px);
 
                 background-clip: content-box;
-                background-color: $red;
-                border: 3px solid $dark-gray-color-5;
+                background-color: var(--red);
+                border: 3px solid var(--dark-gray-color-5);
                 border-radius: 50%;
-                color: $white;
+                color: var(--white);
                 content: attr(data-badge);
                 display: inline-block;
                 font-size: 10px;
@@ -169,8 +169,8 @@ body:not(.fixed) #navigation-level-1-items {
             margin: 5px 0 0;
             padding: 4px 4px;
 
-            background-color: $dark-gray-color-5;
-            border: 1px solid $dark-gray-color-40;
+            background-color: var(--dark-gray-color-5);
+            border: 1px solid var(--dark-gray-color-40);
             border-top: 0;
 
             min-width: 150px;
@@ -221,7 +221,7 @@ body.fixed {
     }
 
     #navigation-level-1-items {
-        background-color: $base-color;
+        background-color: var(--base-color);
 
         list-style: none;
         margin: 0 0 0px -15px;
@@ -248,11 +248,11 @@ body.fixed {
                 flex-wrap: nowrap;
                 align-items: center;
 
-                color: $white;
+                color: var(--white);
             }
 
             &:hover {
-                background-color: $base-color-80;
+                background-color: var(--base-color-80);
             }
 
             &.overflow {
