--- a/resources/assets/stylesheets/scss/oer.scss
+++ b/resources/assets/stylesheets/scss/oer.scss
@@ -17,7 +17,7 @@
     padding-right: 5px;
     li {
         padding: 5px;
-        border-top: thin solid $table-header-color;
+        border-top: thin solid var(--table-header-color);
         padding-right: 0px;
     }
     li.folder {
@@ -29,7 +29,7 @@
         list-style-type: none;
     }
     > li:last-child {
-        border-bottom: thin solid $table-header-color;
+        border-bottom: thin solid var(--table-header-color);
     }
 }
 
@@ -54,7 +54,7 @@
     .author_host {
         font-size: 0.8em;
         display: inline;
-        color: $dark-gray-color-80;
+        color: var(--dark-gray-color-80);
     }
     .description {
         margin-top: 5px;
@@ -67,7 +67,7 @@ ul.reviews, ol.reviews {
     margin: 0px;
     > li.review {
         margin-bottom: 10px;
-        border: thin solid $base-color-60;
+        border: thin solid var(--base-color-60);
         padding: 10px;
         display: flex;
         > .avatar {
@@ -82,12 +82,12 @@ ul.reviews, ol.reviews {
                 margin-bottom: 5px;
             }
             .origin {
-                color: $dark-gray-color-80;
+                color: var(--dark-gray-color-80);
                 font-size: 0.8em;
             }
             .timestamp {
                 float: right;
-                color: $dark-gray-color-80;
+                color: var(--dark-gray-color-80);
                 font-size: 0.8em;
             }
         }
@@ -101,7 +101,7 @@ ul.reviews, ol.reviews {
 }
 
 .maininfo {
-    border: thin solid $brand-color-light;
+    border: thin solid var(--brand-color-light);
     padding: 10px;
 }
 
@@ -112,7 +112,7 @@ ul.reviews, ol.reviews {
     width: 100%;
     height: calc((100vw - 270px) * 2 / 3);
     max-height: 666px;
-    border: 1px solid $content-color-40;
+    border: 1px solid var(--content-color-40);
     background: black;
     &.image {
         background-repeat: no-repeat;
@@ -168,7 +168,7 @@ ul.reviews, ol.reviews {
         display: flex;
         justify-content: space-between;
         font-size: 0.8em;
-        color: $black;
+        color: var(--black);
         margin-top: 20px;
     }
 
@@ -177,15 +177,12 @@ ul.reviews, ol.reviews {
 .oercampus_editmaterial, .oer_material_overview {
     article.contentbox {
         display: inline-block;
-        margin-right: 15px;
-        margin-bottom: 15px;
-        margin-top: 0px;
-        margin-left: 0px;
+        margin: 0 15px 15px 0;
 
         width: 270px;
         max-width: 270px;
         box-sizing: border-box;
-        border: solid 1px $base-color-60;
+        border: solid 1px var(--base-color-60);
         transition: all 300ms ease 0s;
         position: relative;
 
@@ -195,8 +192,8 @@ ul.reviews, ol.reviews {
             padding-left: 5px;
 
             width: 100%;
-            background-color: $content-color-20;
-            color: $brand-color-dark;
+            background-color: var(--content-color-20);
+            color: var(--brand-color-dark);
             font-size: 12pt;
             font-weight: bold;
             text-align: left;
@@ -209,7 +206,7 @@ ul.reviews, ol.reviews {
         h1 {
             padding: 5px;
             margin: 0px;
-            color: $base-color;
+            color: var(--base-color);
             border-bottom: medium none;
             font-size: medium;
             display: flex;
@@ -230,7 +227,7 @@ ul.reviews, ol.reviews {
 
         .image {
             display: block;
-            margin: 0px;
+            margin: 0;
             height: 180px;
             background-position: center center;
             background-size: cover;
@@ -254,7 +251,7 @@ ul.reviews, ol.reviews {
         display: flex;
 
         .frame {
-            border: thin solid $content-color-40;
+            border: thin solid var(--content-color-40);
             display: flex;
             justify-content: space-between;
             align-items: stretch;
@@ -266,7 +263,7 @@ ul.reviews, ol.reviews {
                 align-items: center;
                 justify-content: space-between;
                 border: solid thin black;
-                background-color: $content-color-20;
+                background-color: var(--content-color-20);
                 margin: 3px;
                 padding: 5px;
             }
@@ -284,7 +281,7 @@ ul.reviews, ol.reviews {
                 border-top: none;
                 height: 35px;
                 &.active {
-                    background-color: $base-color;
+                    background-color: var(--base-color);
                 }
                 &.erase {
                     background-color: white;
@@ -300,8 +297,8 @@ ul.reviews, ol.reviews {
         }
 
         button {
-            border: thin solid $content-color-40;
-            background-color: $content-color-20;
+            border: thin solid var(--content-color-40);
+            background-color: var(--content-color-20);
             display: flex;
             align-items: center;
             justify-content: center;
@@ -321,9 +318,8 @@ ul.reviews, ol.reviews {
         width: 819px;
         max-width: calc(100% - 50px);
         animation: oer-filter-panel-appears 200ms ease-out;
-        border: thin solid $content-color-40;
-        margin: 0px;
-        margin-top: 46px;
+        border: thin solid var(--content-color-40);
+        margin: 46px 0 0;
         height: 183px;
         display: flex;
         justify-content: space-around;
@@ -350,7 +346,7 @@ ul.reviews, ol.reviews {
                 display: flex;
                 justify-content: space-between;
                 font-size: 0.8em;
-                color: $black;
+                color: var(--black);
                 margin-top: 20px;
             }
             .level_numbers {
@@ -368,14 +364,12 @@ ul.reviews, ol.reviews {
     .filterpanel_shadow {
         position: absolute;
         z-index: 0;
-        background-color: $dark-gray-color-45;
+        background-color: var(--dark-gray-color-45);
         padding: 10px;
         width: 819px;
         max-width: calc(100% - 50px);
         animation: oer-filter-panel-appears 200ms ease-out;
-        margin: 0px;
-        margin-top: 49px;
-        margin-left: 3px;
+        margin: 49px 0 0 3px;
         height: 183px;
     }
 
@@ -388,7 +382,7 @@ ul.reviews, ol.reviews {
     .browser {
         margin-top: 15px;
         padding: 10px;
-        background-color: $content-color-20;
+        background-color: var(--content-color-20);
         width: 840px;
         max-width: 100%;
         box-sizing: border-box;
@@ -455,15 +449,15 @@ ul.reviews, ol.reviews {
         display: flex;
         justify-content: space-between;
         font-size: 0.8em;
-        color: $black;
+        color: var(--black);
         margin-top: 20px;
     }
 }
 
 @keyframes oer-filter-panel-appears {
     from {
-        max-height: 0px;
-        border-bottom-width: 0px;
+        max-height: 0;
+        border-bottom-width: 0;
         overflow: hidden;
     }
     99% {
