--- a/resources/assets/stylesheets/scss/overlapping.scss
+++ b/resources/assets/stylesheets/scss/overlapping.scss
@@ -7,10 +7,10 @@
     width: 100%;
     height: 30px;
     margin-bottom: 5px;
-    color: $dark-gray-color;
+    color: var(--dark-gray-color);
     font-weight: 700;
     font-size: 16px;
-    border-bottom: 1px solid $light-gray-color-40;
+    border-bottom: 1px solid var(--light-gray-color-40);
 
     h2 {
         position: absolute;
@@ -41,13 +41,13 @@ ul.mvv-ovl-conflict {
             top: 0;
             right: 0;
             text-align: right;
-            border-bottom: solid 1px $light-gray-color-40;
+            border-bottom: solid 1px var(--light-gray-color-40);
 
             &:first-of-type {
                 left: 30px;
                 width: auto;
                 text-align: left;
-                border-bottom: solid 1px $light-gray-color-40;
+                border-bottom: solid 1px var(--light-gray-color-40);
             }
 
             & > div {
@@ -66,7 +66,7 @@ ul.mvv-ovl-conflict {
 .mvv-ovl-base-course {
     position: absolute;
     width: 5px;
-    color: $red;
+    color: var(--red);
     left: 10px;
 
     ~ label {
