--- a/resources/assets/stylesheets/scss/personal-notifications.scss
+++ b/resources/assets/stylesheets/scss/personal-notifications.scss
@@ -6,15 +6,15 @@
     width: 100%;
     height: 100%;
     font-size: 0.8em;
-    color: $base-color;
+    color: var(--base-color);
     text-align: center;
     line-height: 24px;
-    background-color: $dark-gray-color-10;
-    border: 1px solid $dark-gray-color-40;
+    background-color: var(--dark-gray-color-10);
+    border: 1px solid var(--dark-gray-color-40);
 
     &.alert {
-        background-color: $red;
-        color: $white;
+        background-color: var(--red);
+        color: var(--white);
     }
 }
 
@@ -25,10 +25,9 @@
 
     width: 49px;
     height: 30px;
-    /*border: thin solid $dark-gray-color-20;*/
-    color: $base-color;
+    color: var(--base-color);
     vertical-align: text-bottom;
-    background-color: $base-color;
+    background-color: var(--base-color);
     position: relative;
 
     // Insert invisible padding on top of the arrow in order to try to
@@ -90,17 +89,17 @@
         // Creates an arrow pointing from the list to the triggering element
         @include arrow-top-border(10px, $white, 1px, $light-gray-color-80);
 
-        background-color: $white;
-        border-left: thin solid $light-gray-color-60;
-        border-top: thin solid $light-gray-color-60;
+        background-color: var(--white);
+        border-left: thin solid var(--light-gray-color-60);
+        border-top: thin solid var(--light-gray-color-60);
         border-collapse: collapse;
-        color: $black;
+        color: var(--black);
         display: none;
         font-size: 1em;
         position: absolute;
         width: $list-width;
         max-width: $list-width;
-        box-shadow: 1px 1px 1px $light-gray-color-80;
+        box-shadow: 1px 1px 1px var(--light-gray-color-80);
 
         // Without this, buttons or message boxes would appear on top of the list
         z-index: 2;
@@ -128,14 +127,14 @@
         // List item
         .item {
             $padding: 5px;
-            border-top: thin solid $light-gray-color-60;
+            border-top: thin solid var(--light-gray-color-60);
             line-height: 20px;
             height: auto;
             padding: $padding;
             white-space: normal;
 
             &:hover {
-                background-color: $light-gray-color-20
+                background-color: var(--light-gray-color-20)
             }
 
             &:only-child:hover {
@@ -178,10 +177,10 @@
         }
 
         a:not(.mark-all-as-read) {
-            color: $brand-color-dark;
+            color: var(--brand-color-dark);
             display: block;
             padding: 0;
-            &:hover { color: $active-color; }
+            &:hover { color: var(--active-color); }
         }
 
         .options {
@@ -201,8 +200,8 @@
 
     a.mark-all-as-read:not(.invisible),
     a.enable-desktop-notifications {
-        background-color: $dark-gray-color-15;
-        border-bottom: thin solid $dark-gray-color-45;
+        background-color: var(--dark-gray-color-15);
+        border-bottom: thin solid var(--dark-gray-color-45);
         display: block;
         max-height: 31px;
         padding: 5px 5px 5px 14px;
