--- a/resources/assets/stylesheets/scss/plugins.scss
+++ b/resources/assets/stylesheets/scss/plugins.scss
@@ -31,7 +31,7 @@
             width: 100%;
             height: 4em;
             margin: 0;
-            background-image: linear-gradient(to bottom, rgba(255,0,0,0), $white)
+            background-image: linear-gradient(to bottom, rgba(255,0,0,0), var(--white))
         }
     }
 
