--- a/resources/assets/stylesheets/scss/progress_indicator.scss
+++ b/resources/assets/stylesheets/scss/progress_indicator.scss
@@ -11,7 +11,7 @@
     }
     .progress-indicator-description,
     .progress-indicator-description-default {
-        color: $dark-gray-color-45;
+        color: var(--dark-gray-color-45);
         text-align: center;
         margin-top: 10px;
     }
