--- a/resources/assets/stylesheets/scss/resources.scss
+++ b/resources/assets/stylesheets/scss/resources.scss
@@ -30,7 +30,7 @@
 
 tr.resource-planning-selected-request {
     td {
-        background: $yellow-40;
+        background: var(--yellow-40);
     }
 }
 
@@ -66,8 +66,8 @@ ul.resource-tree {
 
 .resource-tree {
     .selected-resource {
-        background-color: $origin-base-color;
-        color: $white;
+        background-color: var(--origin-base-color);
+        color: var(--white);
         padding: 2px;
         width: calc(100% - 21px);
     }
@@ -212,15 +212,15 @@ ul.resource-tree {
 
 .resource-request {
     .overlapping-requests {
-        color: $yellow-60;
+        color: var(--yellow-60);
     }
 
     .overlapping-bookings {
-        color: $red-60;
+        color: var(--red-60);
     }
 
     .resource-available {
-        color: $green-60;
+        color: var(--green-60);
     }
 }
 
@@ -262,7 +262,7 @@ ul.resource-tree {
         .booking-list-interval-date {
             &.not-taking-place {
                 text-decoration: line-through;
-                color: $light-gray-color;
+                color: var(--light-gray-color);
             }
 
             margin-right: 1.2em;
@@ -354,7 +354,7 @@ ul.resource-tree {
 }
 
 .fc-time, .fc-widget-header {
-    background-color: $content-color-20;
+    background-color: var(--content-color-20);
 }
 
 .request-list {
@@ -450,7 +450,7 @@ form#resolve-request, form#decline-request {
                                 > th {
                                     &:first-child {
                                         z-index: 2;
-                                        background-color: $content-color-20;
+                                        background-color: var(--content-color-20);
                                         min-width: 180px;
                                         left: 0;
                                     }
@@ -460,7 +460,7 @@ form#resolve-request, form#decline-request {
                                     z-index: 1;
                                     border-top: none;
                                     border-bottom: none !important;
-                                    box-shadow: inset 0 1px 0 $brand-color-darker;
+                                    box-shadow: inset 0 1px 0 var(--brand-color-darker);
                                 }
                             }
                         }
@@ -472,7 +472,7 @@ form#resolve-request, form#decline-request {
                                         position: sticky;
                                         left: 0;
                                         z-index: 1;
-                                        background: $white;
+                                        background: var(--white);
                                     }
                                 }
                             }
