--- a/resources/assets/stylesheets/scss/responsive.scss
+++ b/resources/assets/stylesheets/scss/responsive.scss
@@ -71,7 +71,7 @@ $sidebarOut: -330px;
 }
 
 #responsive-navigation-items {
-    background-color: $base-color;
+    background-color: var(--base-color);
     left: 0;
     max-height: calc(100vh - $header-bar-container-height - 5px);
     max-width: $responsive-menu-width;
@@ -132,7 +132,7 @@ $sidebarOut: -330px;
                     background-color: transparent;
 
                     &:hover {
-                        background-color: $base-color-80;
+                        background-color: var(--base-color-80);
                     }
                 }
             }
@@ -154,14 +154,14 @@ $sidebarOut: -330px;
     }
 
     .navigation-item {
-        background-color: $base-color;
+        background-color: var(--base-color);
         display: flex;
         flex-wrap: wrap;
         list-style-type: none;
         margin: 0px;
 
         &:not(:last-child) {
-            border-bottom: 1px solid $white;
+            border-bottom: 1px solid var(--white);
         }
 
         &.navigation-up,
@@ -177,22 +177,22 @@ $sidebarOut: -330px;
             }
 
             &:hover {
-                background-color: $base-color-80;
+                background-color: var(--base-color-80);
             }
 
         }
 
         &.navigation-item-active {
-            background-color: $base-color-80;
+            background-color: var(--base-color-80);
         }
 
         a {
-            color: $white;
+            color: var(--white);
             cursor: pointer;
         }
 
         button {
-            color: $white;
+            color: var(--white);
             cursor: pointer;
             display: flex;
             flex: 0;
@@ -205,20 +205,20 @@ $sidebarOut: -330px;
             }
 
             &.navigation-in {
-                border-left: 1px solid $base-color-60;
+                border-left: 1px solid var(--base-color-60);
             }
         }
 
         &:not(.navigation-current):not(.navigation-up) {
             button:hover {
-                background-color: $base-color-80;
+                background-color: var(--base-color-80);
             }
         }
 
     }
 
     .navigation-title {
-        color: $white;
+        color: var(--white);
         flex: 1;
 
         > a {
@@ -255,7 +255,7 @@ $sidebarOut: -330px;
         flex: 0;
 
         &:hover {
-            background-color: $base-color-80;
+            background-color: var(--base-color-80);
         }
 
     }
@@ -318,7 +318,7 @@ $sidebarOut: -330px;
     }
 
     #sidebar {
-        background-color: $white;
+        background-color: var(--white);
         max-height: calc(100vh - 100px);
         left: 15px;
         position: absolute;
@@ -722,8 +722,8 @@ html:not(.responsive-display):not(.fullscreen-mode) {
                 flex-direction: row;
                 flex-wrap: nowrap;
 
-                background-color: $dark-gray-color-10;
-                border-bottom: 1px solid $dark-gray-color-40;
+                background-color: var(--dark-gray-color-10);
+                border-bottom: 1px solid var(--dark-gray-color-40);
 
                 .colorblock,
                 #context-title,
