--- a/resources/assets/stylesheets/scss/scroll-to-top.scss
+++ b/resources/assets/stylesheets/scss/scroll-to-top.scss
@@ -8,7 +8,7 @@ body #scroll-to-top {
     margin-right: $scroll-to-top-margin;
     margin-bottom: $scroll-to-top-margin;
     padding: 10px;
-    background: $base-color;
+    background: var(--base-color);
     border: 1px solid transparent;
     background-clip: padding-box;
     cursor: pointer;
@@ -19,7 +19,7 @@ body #scroll-to-top {
     transition: all 250ms ease-in-out;
     z-index: 1;
     &:hover {
-        background: $brand-color-darker;
+        background: var(--brand-color-darker);
         border-radius: 2px;
     }
     &.hide {
