--- a/resources/assets/stylesheets/scss/select.scss
+++ b/resources/assets/stylesheets/scss/select.scss
@@ -7,7 +7,7 @@
     }
 
     .vs__option-color {
-        border: solid thin $content-color-40;
+        border: solid thin var(--content-color-40);
         padding-left: 20px;
         height: 16px;
         margin-right: 4px;
@@ -27,13 +27,13 @@
     }
 
     &.studip-v-select-drop-up {
-        border-bottom: solid thin $content-color-40;
+        border-bottom: solid thin var(--content-color-40);
         border-top: none;
     }
 
     &.studip-v-select-ul-drop-up {
         border-bottom: none;
-        border-top: solid thin $content-color-40;
+        border-top: solid thin var(--content-color-40);
         box-shadow: 0px -3px 6px 0 rgba(0, 0, 0, 0.15);
     }
 
