--- a/resources/assets/stylesheets/scss/sidebar.scss
+++ b/resources/assets/stylesheets/scss/sidebar.scss
@@ -1,5 +1,5 @@
 #sidebar {
-    background: $white;
+    background: var(--white);
     border-left: 0;
     display: inline-block;
     height: max-content;
@@ -33,7 +33,7 @@
         flex: 0;
 
         background-color: rgba(255, 255, 255, 1);
-        border: 0px solid $base-color-20;
+        border: 0px solid var(--base-color-20);
         padding: 0px;
         max-height: 60px;
     }
@@ -46,7 +46,7 @@
         padding: 12px 15px 0;
         border-bottom: 12px solid transparent;
 
-        color: $white;
+        color: var(--white);
         font-size: 1.2em;
         overflow: hidden;
         word-break: break-word;
@@ -85,15 +85,15 @@
     }
     .sidebar-widget,
     .sidebar-widget-placeholder {
-        background: $white;
-        border: 1px solid $content-color-40;
+        background: var(--white);
+        border: 1px solid var(--content-color-40);
         margin: 15px 0 0;
         width: $sidebar-width - 5px;
     }
     .sidebar-widget-header,
     .sidebar-widget-extra {
-        background: $content-color-20;
-        color: $base-color;
+        background: var(--content-color-20);
+        color: var(--base-color);
         font-weight: bold;
         padding: 4px;
     }
@@ -152,27 +152,27 @@ div#sidebar-navigation {
     }
     span[disabled],
     a[disabled] {
-        color: $dark-gray-color-80;
+        color: var(--dark-gray-color-80);
         cursor: not-allowed;
         font-weight: lighter;
     }
     &.sidebar-navigation > li.active {
-        background-color: $base-color;
+        background-color: var(--base-color);
         margin-left: -4px;
         //#arrow > .right-border(14px, $content-color-20, 1px, $content-color-40, -5px);
         @include arrow-right-border(14px, $base-color, 1px, $base-color, -5px);
         a {
-            color: $white;
+            color: var(--white);
             padding-left: 4px;
         }
     }
     &.sidebar-views > li.active {
-        background: $activity-color-40;
+        background: var(--activity-color-40);
         margin-left: -5px;
-        box-shadow: inset 0 0 0 1px $activity-color;
+        box-shadow: inset 0 0 0 1px var(--activity-color);
         @include arrow-right-border(14px, $activity-color-40, 1px, $activity-color, -5px);
         a, button {
-            color: $base-color;
+            color: var(--base-color);
             padding-left: 5px;
         }
     }
@@ -218,7 +218,7 @@ div#sidebar-navigation {
 }
 
 .sidebar-widget {
-    background: $white;
+    background: var(--white);
 
     .widget-options {
         list-style: none;
@@ -261,7 +261,7 @@ div#sidebar-navigation {
     }
 }
 .sidebar-widget-content {
-    border-top: 1px solid $content-color-40;
+    border-top: 1px solid var(--content-color-40);
     overflow-wrap: break-word;
     padding: 4px;
     transition: all 0.5s;
@@ -301,7 +301,7 @@ select.sidebar-selectlist {
 
                 input[type=text] {
                     box-sizing: border-box;
-                    border: 1px solid $dark-gray-color-30;
+                    border: 1px solid var(--dark-gray-color-30);
                     border-right: none;
                     flex: 1;
                     padding: .25em .5em;
@@ -309,9 +309,9 @@ select.sidebar-selectlist {
                 }
 
                 .submit-search {
-                    background-color: $content-color-20;
-                    border: 1px solid $dark-gray-color-30;
-                    border-left-color: $light-gray-color-40;
+                    background-color: var(--content-color-20);
+                    border: 1px solid var(--dark-gray-color-30);
+                    border-left-color: var(--light-gray-color-40);
                     border-radius: 0;
                     color: transparent;
                     cursor: pointer;
