--- a/resources/assets/stylesheets/scss/start.scss
+++ b/resources/assets/stylesheets/scss/start.scss
@@ -8,7 +8,7 @@
 
 #main, #choices {
     width: 99%;
-    border: 1px solid $dark-gray-color-60;
+    border: 1px solid var(--dark-gray-color-60);
 }
 
 .studip-widget-wrapper {
@@ -17,13 +17,13 @@
 }
 
 .studip-widget {
-    border: 1px solid $base-color-20;
+    border: 1px solid var(--base-color-20);
     transition: border-color 300ms ease-in-out;
 
     .widget-header {
         box-sizing: border-box;
-        background-color: $content-color-20;
-        color: $brand-color-dark;
+        background-color: var(--content-color-20);
+        color: var(--brand-color-dark);
         font-size: 1.1em;
         font-weight: bold;
         line-height: 2em;
@@ -54,12 +54,12 @@
 }
 
 .studip-widget:hover {
-    border: 1px solid $brand-color-darker;
+    border: 1px solid var(--brand-color-darker);
     transition: border-color 300ms ease-in-out;
 
 }
 #widget_choices{
-    border-right: 1px dashed $brand-color-darker;
+    border-right: 1px dashed var(--brand-color-darker);
     margin-right: 25px;
 }
 .start-widgetcontainer {
@@ -80,7 +80,7 @@
     width: 100%;
 }
 .ui-widgetContainer {
-    color: $white;
+    color: var(--white);
     background-image: none;
 }
 
@@ -92,9 +92,9 @@
     line-height: 30px;
 
     text-align: center;
-    color: $white;
+    color: var(--white);
     font-size: 1.3em;
-    background-color: $content-color;
+    background-color: var(--content-color);
 }
 
 .ui-widget_head:hover {
@@ -104,24 +104,24 @@
 .ui-widget_head h1 {
     line-height: 100px;
     text-align: center;
-    color: $black;
+    color: var(--black);
 }
 
 .addclip-widgets {
-    color: $black;
+    color: var(--black);
     list-style: none;
     margin: 0;
     padding: 0;
 
     a:link, a:visited {
-        color: $black;
+        color: var(--black);
     }
     a:hover, a:active {
-        color: $active-color;
+        color: var(--active-color);
     }
 
     li {
-        border-top: 1px solid $content-color;
+        border-top: 1px solid var(--content-color);
         padding: 4px 0;
 
         &:first-child {
@@ -163,7 +163,7 @@ div.start-widgetcontainer {
             display: none;
         }
         &.move {
-            border: $base-color-80 dashed 1px;
+            border: var(--base-color-80) dashed 1px;
         }
     }
 }
@@ -192,7 +192,7 @@ div.available-widgets {
         }
 
         &.move {
-            border: $base-color-80 dashed 1px;
+            border: var(--base-color-80) dashed 1px;
         }
     }
 
