--- a/resources/assets/stylesheets/scss/statusgroups.scss
+++ b/resources/assets/stylesheets/scss/statusgroups.scss
@@ -19,8 +19,8 @@ section.course-statusgroups {
         }
 
         section {
-            border-left: 1px solid $content-color-20;
-            border-right: 1px solid $content-color-20;
+            border-left: 1px solid var(--content-color-20);
+            border-right: 1px solid var(--content-color-20);
 
             table {
                 td.memberactions {
@@ -29,7 +29,7 @@ section.course-statusgroups {
 
                 thead {
                     tr th {
-                        background-color: $content-color-20;
+                        background-color: var(--content-color-20);
                     }
                 }
 
@@ -37,14 +37,14 @@ section.course-statusgroups {
                     tr td {
                         span.member-invisible {
                             font-style: italic;
-                            color: $light-gray-color;
+                            color: var(--light-gray-color);
                         }
                     }
                 }
 
                 tfoot {
                     tr td {
-                        background-color: $content-color-20;
+                        background-color: var(--content-color-20);
                         padding-left: 5px;
                         padding-right: 0;
                     }
@@ -58,17 +58,16 @@ section.course-statusgroups {
         }
 
         &.draggable.open {
-            background-color: $white;
+            background-color: var(--white);
         }
 
     }
 
     footer {
-        background-color: $content-color-20;
-        border-top: 1px solid $black;
+        background-color: var(--content-color-20);
+        border-top: 1px solid var(--black);
         font-size: medium;
-        padding: 5px;
-        padding-left: 18px;
+        padding: 5px 5px 5px 18px;
         text-align: left;
     }
 
