--- a/resources/assets/stylesheets/scss/studip-overlay.scss
+++ b/resources/assets/stylesheets/scss/studip-overlay.scss
@@ -42,7 +42,7 @@
             margin-bottom: 0;
             padding-bottom: 100px;
 
-            color: $white;
+            color: var(--white);
             border-bottom: 0;
         }
 
@@ -59,13 +59,14 @@
 
             border: none;
             border-radius: 2px;
-            box-shadow: 0 0 3px $light-gray-color-20;
+            box-shadow: 0 0 3px var(--light-gray-color-20);
 
-            background-color: $light-gray-color;
+            background-color: var(--light-gray-color);
 
-            &::-moz-progress-bar, &::-webkit-progress-value {
-                background-color: $yellow-40;
-                transition: all 300ms;
+            &::-moz-progress-bar,
+            &::-webkit-progress-value {
+                background-color: var(--yellow-40);
+                transition: all $transition-duration;
             }
         }
 
@@ -79,7 +80,7 @@
             margin: 60px 0 0;
             padding: 0;
             text-align: center;
-            color: $white;
+            color: var(--white);
             max-height: 120px;
             overflow: hidden;
         }
