--- a/resources/assets/stylesheets/scss/study-area-selection.scss
+++ b/resources/assets/stylesheets/scss/study-area-selection.scss
@@ -3,8 +3,8 @@
     padding: 1em;
 
     h3    { margin-top: 1em; }
-    .odd  { background-color: #f3f5f8; }
-    .even { background-color: $content-color-20; }
+    .odd  { background-color: var(--content-color-10); }
+    .even { background-color: var(--content-color-20); }
 }
 
 #study_area_selection_none,
