--- a/resources/assets/stylesheets/scss/tooltip.scss
+++ b/resources/assets/stylesheets/scss/tooltip.scss
@@ -2,16 +2,16 @@
 %tooltip {
     @include arrow-bottom-border(9px, $dark-gray-color-5, 1px, $dark-gray-color-30, 5px);
 
-    background-color: $dark-gray-color-5;
-    border: 1px solid $dark-gray-color-30;
-    box-shadow: 0 1px 0 fade-out(#fff, 0.5) inset;
-    font-size: $font-size-base;
+    background-color: var(--dark-gray-color-5);
+    border: 1px solid var(--dark-gray-color-30);
+    box-shadow: 0 1px 0 fade-out($white, 0.5) inset;
+    font-size: var(--font-size-base);
     margin-bottom: 8px;
     max-width: 230px;
     padding: 10px;
     position: absolute;
     text-align: left;
-    text-shadow: 0 1px 0 fade-out(#fff, 0.5);
+    text-shadow: 0 1px 0 fade-out($white, 0.5);
     white-space: normal;
     z-index: 10000;
 
