--- a/resources/assets/stylesheets/scss/tour.scss
+++ b/resources/assets/stylesheets/scss/tour.scss
@@ -17,8 +17,8 @@
     bottom: 20px;
     right: 20px;
     z-index:20001;
-    border: solid 1px $base-color;
-    background-color: $white;
+    border: solid 1px var(--base-color);
+    background-color: var(--white);
     padding: 10px 10px;
     font-family: $font-family-base;
     overflow-y: auto;
@@ -30,7 +30,7 @@
 }
 
 .tour_focus_box {
-    border: 2px dashed $yellow;
+    border: 2px dashed var(--yellow);
 }
 
 #tour_tip {
@@ -41,9 +41,9 @@
     font-family: $font-family-base;
     font-size: 16px;
     box-sizing: border-box;
-    background-color: $base-color;
-    color: $white;
-    border: solid 1px $dark-gray-color-80;
+    background-color: var(--base-color);
+    color: var(--white);
+    border: solid 1px var(--dark-gray-color-80);
     box-shadow: 0px 0px 8px rgba(0,0,0,0.5);
 
     a.link-extern {
@@ -53,11 +53,11 @@
         @include icon(before, link-intern, info-alt);
     }
     a, a:link, a:visited {
-        color: $white;
+        color: var(--white);
         text-decoration: none;
     }
     a:hover, a:active, a:hover.index, a:active.index, a:hover.tree {
-        color: $white;
+        color: var(--white);
         text-decoration: underline;
     }
 }
@@ -70,9 +70,9 @@
     font-family: $font-family-base;
     font-size: 16px;
     box-sizing: border-box;
-    background-color: $yellow;
-    color: $black;
-    border: solid 1px $dark-gray-color-10;
+    background-color: var(--yellow);
+    color: var(--black);
+    border: solid 1px var(--dark-gray-color-10);
     box-shadow: 0px 0px 8px rgba(0,0,0,0.5);
 }
 
@@ -88,7 +88,7 @@
 }
 
 #tour_overlay {
-    background-color: $white;
+    background-color: var(--white);
     opacity: 0.4;
     position: fixed;
     z-index: 10000;
@@ -97,7 +97,7 @@
 }
 
 #tour_selector_overlay {
-    background-color: $white;
+    background-color: var(--white);
     opacity: 0.5;
     position: absolute;
 }
